# telegram-bot

./: .gitignore  config.example.ini  config.example.toml  pyproject.toml
src/: callback_data.py  config.py  exceptions.py  main.py  shortcuts.py
src/cart/: callback_data.py  exceptions.py  handlers.py  models.py  services.py  views.py
src/core/: exceptions.py  filters.py  services.py  shortcuts.py  views.py
src/filters/: __init__.py  message_length.py
src/handlers/: __init__.py  balance.py  dev.py  products.py  profile.py  remove_message.py  start.py  support.py
src/info/: models.py  services.py  views.py
src/keyboards/: __init__.py  accept_support_rules.py  back_to_menu.py  categories_list.py  category_menu.py  choose_subject.py  coinbase_payment.py  menu.py  payment_methods.py  product_detail.py  remove_message.py  rules.py  support_menu.py  support_requests_list.py  support_ticket_detail.py  support_tickets_list.py  user_balance.py
src/models/: __init__.py  payments.py  products.py  profile.py  support.py  users.py
src/payments/: handlers.py  models.py  services.py  states.py  views.py
src/products/: callback_data.py  handlers.py  models.py  services.py  views.py
src/states/: __init__.py  support.py
src/support/: callback_data.py  handlers.py  models.py  services.py  views.py
src/users/: handlers.py  keyboards.py  models.py  services.py  views.py
src/views/: __init__.py  accept_rules.py  accept_support_rules.py  base.py  categories_list.py  category_menu.py  choose_subject.py  coinbase_payment.py  faq.py  menu.py  (+11 more)
tests/: test_response.py
(+18 files in other folders)
