[tool.poetry]
name = "shop-bot-client"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_bot_client"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
