[tool.poetry]
name = "shop-bot-client"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_bot_client"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
httpx = "^0.23.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
