[tool.poetry]
name = "shop-bot-client"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_bot_client"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
httpx = "^0.24.0"
pydantic = "^1.10.7"
structlog = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
